Updated the styles to hopefully not be stretched on the homepage and fixed "downtown".

--- a/public/styles/dog-mobile.css
+++ b/public/styles/dog-mobile.css
@@ -370,6 +370,10 @@ hr {
 .price-table tfoot {
 }
 
+.slick-slide img {
+  min-height: 300px;
+}
+
 .specials {
   position: absolute;
   right: 0px;
